Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/InheritanceConflict.out
InheritanceConflict.java:20:1: compiler.err.concrete.inheritance.conflict: f(T), inheritance.conflict.B<java.lang.String>, f(java.lang.String), inheritance.conflict.A<java.lang.String>, inheritance.conflict.B<java.lang.String>
1 error
